Updates on index page.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,6 +20,21 @@
 
 <body>
     <h1>Greetings!</h1>
+    <nav>
+        <ul>
+            <li>
+                Home
+            </li>
+
+            <li>
+                About
+            </li>
+
+            <li>
+                Contact
+            </li>
+        </ul>
+    </nav>
 </body>
 
 </html>
