My first HTML project.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,11 +27,11 @@
             </li>
 
             <li>
-                About
+                <a href="about.html">About</a>
             </li>
 
             <li>
-                Contact
+                <a href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
