Changes made to exercise HTML and CSS files.

--- a/HTML/Exercises/Simple Website/index.html
+++ b/HTML/Exercises/Simple Website/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header><H1>PISTOLS</H1></header>
@@ -26,17 +27,17 @@
     </nav>
     <main>
         <section>
-            <title>More information</title>
+            <h1>More information</h1>
             <article>
                 <header>
-                   <title><h3>New arrivals</h3></title> 
+                   <h3>New arrivals</h3>
                    <p>Here you can find the newest pistols in our shop</p>
                 </header>
                 <p>By Daniel I.</p>
             </article>
             <article>
                 <header>
-                    <title><h3>Bullets</h3></title>
+                    <h3>Bullets</h3>
                     <p>All the available bullets can be found here</p>
                 </header>
                 <p>By Daniel I.</p>
