--- a/HTML/Exercises/Grades/index.html
+++ b/HTML/Exercises/Grades/index.html
@@ -14,7 +14,7 @@
 
             </tr>
             <tr>
-                <th>Num</th>
+                <th>№</th>
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Score</th>
@@ -25,10 +25,23 @@
                 <td>1</td>
                 <td>Peter</td>
                 <td>Petkov</td>
-                <td>100</td>
+                <td>130</td>
             </tr>
-
+            <tr>
+                <td>2</td>
+                <td>Daniel</td>
+                <td>Dukov</td>
+                <td>120</td>
+            </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="4" class="result">
+                    Average score: 123
+                </td>
+
+            </tr>
+        </tfoot>
     </table> 
 </body>
 </html>
