--- a/HTML/Exercises/Grades/index.html
+++ b/HTML/Exercises/Grades/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exam Result</title>
+    <title>Exam Results</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
@@ -23,21 +23,39 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Peter</td>
-                <td>Petkov</td>
-                <td>130</td>
+                <td>Gosho</td>
+                <td>Goshev</td>
+                <td>500</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Daniel</td>
-                <td>Dukov</td>
-                <td>120</td>
+                <td>Tosho</td>
+                <td>Toshev</td>
+                <td>500</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Gencho</td>
+                <td>Genchev</td>
+                <td>500</td>
+            </tr>
+            <tr>
+                <td>4/td>
+                <td>Draga</td>
+                <td>Draganova</td>
+                <td>500</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Gosho</td>
+                <td>Goshev</td>
+                <td>500</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
                 <td colspan="4" class="result">
-                    Average score: 123
+                    Average score: 500
                 </td>
 
             </tr>
