Last changes made on the files.

--- a/HTML/Exercises/Grades/index.html
+++ b/HTML/Exercises/Grades/index.html
@@ -10,7 +10,7 @@
 <body> 
     <table>
         <thead>
-            <tr><th colspan="4">Front-end Development Results</th>
+            <tr><th colspan="4">Web Fundamentals exam result</th>
 
             </tr>
             <tr>
@@ -22,31 +22,31 @@
         </thead>
         <tbody>
             <tr>
-                <td>1</td>
+                <td>01</td>
                 <td>Gosho</td>
                 <td>Goshev</td>
                 <td>500</td>
             </tr>
             <tr>
-                <td>2</td>
+                <td>02</td>
                 <td>Tosho</td>
                 <td>Toshev</td>
                 <td>500</td>
             </tr>
             <tr>
-                <td>3</td>
+                <td>03</td>
                 <td>Gencho</td>
                 <td>Genchev</td>
                 <td>500</td>
             </tr>
             <tr>
-                <td>4/td>
+                <td>04</td>
                 <td>Draga</td>
                 <td>Draganova</td>
                 <td>500</td>
             </tr>
             <tr>
-                <td>5</td>
+                <td>05</td>
                 <td>Gosho</td>
                 <td>Goshev</td>
                 <td>500</td>
@@ -55,7 +55,7 @@
         <tfoot>
             <tr>
                 <td colspan="4" class="result">
-                    Average score: 500
+                    Average score from 05 participants:500
                 </td>
 
             </tr>
